# coupler

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
api/auv2/: Cargo.toml
api/auv2-sys/: Cargo.toml
api/auv2-sys/src/: lib.rs
api/auv2/src/: lib.rs
api/vst2-test/: Cargo.toml
api/vst2-test/src/: lib.rs
api/vst2/src/: lib.rs
api/vst3/: Cargo.toml
api/vst3-sys/: Cargo.toml  rustfmt.toml
api/vst3-sys/examples/: gain.rs
api/vst3-sys/src/: lib.rs
api/vst3-test/: Cargo.toml
api/vst3-test/src/: lib.rs
api/vst3/src/: lib.rs
cargo-coupler/: Cargo.toml
cargo-coupler/src/: main.rs
coupler-derive/: Cargo.toml
coupler-derive/src/: enum_.rs  lib.rs  params.rs  smooth.rs
coupler-reflector/: Cargo.toml
coupler-reflector/src/: lib.rs
examples/gain/: Cargo.toml
examples/gain-gui/: Cargo.toml
examples/gain-gui/format/clap/: Cargo.toml
examples/gain-gui/format/clap/src/: lib.rs
examples/gain-gui/format/vst3/: Cargo.toml
examples/gain-gui/format/vst3/src/: lib.rs
examples/gain-gui/src/: lib.rs
examples/gain/format/auv2/: Cargo.toml
examples/gain/format/auv2/src/: lib.rs
examples/gain/format/clap/: Cargo.toml
examples/gain/format/clap/src/: lib.rs
examples/gain/format/vst3/: Cargo.toml
examples/gain/format/vst3/src/: lib.rs
examples/gain/src/: lib.rs
gain/: Cargo.toml
gain/core/: Cargo.toml  lib.rs
gain/format/auv2/: Cargo.toml
gain/format/auv2/src/: lib.rs
gain/format/clap/: Cargo.toml
gain/format/vst3/: Cargo.toml
gain/src/: lib.rs
gain/vst2/: Cargo.toml  lib.rs
gain/vst3/: Cargo.toml  lib.rs
graphics/: Cargo.toml
graphics/examples/: graphics.rs  png.rs
graphics/src/: canvas.rs  color.rs  geom.rs  lib.rs  path.rs  raster.rs  text.rs  thread_pool.rs
plugin/: Cargo.toml
plugin-test/core/: Cargo.toml  lib.rs
plugin-test/vst2/: Cargo.toml  lib.rs
plugin-test/vst3/: Cargo.toml  lib.rs
plugin/src/: atomic.rs  audio_buffers.rs  audio_buses.rs  buffer.rs  bus.rs  editor.rs  lib.rs  param.rs  params.rs  plugin.rs  process.rs  vst2.rs  vst3.rs
plugin/src/atomic/: bitset.rs  mod.rs
plugin/src/internal/: mod.rs  param_states.rs
scripts/gen-uuid/: Cargo.toml
scripts/gen-uuid/src/: main.rs
simd/: Cargo.toml
simd/src/: lib.rs
src/: block.rs  buffer.rs  buffers.rs  bus.rs  collect.rs  editor.rs  engine.rs  events.rs  host.rs  key.rs  lib.rs  param.rs  params.rs  parent.rs  plugin.rs  process.rs  util.rs  view.rs
src/atomic/: bitset.rs  float.rs  mod.rs
src/buffers/: bind.rs  buffer_view.rs  collect.rs  convert.rs  iter.rs  sample_buffer.rs
src/format/: auv2.rs  clap.rs  mod.rs  util.rs  vst3.rs
src/format/clap/: factory.rs  gui.rs  host.rs  instance.rs  mod.rs  tests.rs  util.rs
src/format/vst3/: buffers.rs  component.rs  factory.rs  host.rs  mod.rs  params.rs  tests.rs  util.rs  view.rs
src/params/: format.rs  range.rs  smooth.rs
src/sync/: bitset.rs  float.rs  mod.rs  param_gestures.rs  params.rs  sync_cell.rs  thread_cell.rs  triple_buffer.rs
src/util/: id_map.rs
vst2/: Cargo.toml
vst2-test/src/: lib.rs
vst2/src/: lib.rs
vst3-test/: Cargo.toml
vst3-test/src/: lib.rs
vst3/src/: lib.rs
window/: Cargo.toml
window/examples/: basic.rs
window/src/: lib.rs  macos.rs  windows.rs  x11.rs
