[package]
name = "coupler"
version = "0.1.0"
authors = ["Micah Johnston <micah@photophore.systems>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
coupler-derive = { path = "coupler-derive", optional = true }
clap-sys = "0.3.0"
vst3 = "0.1.1"

[target.'cfg(target_os = "macos")'.dependencies]
auv2-sys = { git = "https://github.com/coupler-rs/auv2-sys", rev = "92dc1ad40c09ca486ee97a78d22b05755ab1cc22" }

[features]
derive = ["coupler-derive"]

[workspace]
members = [
    "cargo-coupler",
    "coupler-derive",
    "examples/*",
    "examples/*/format/*",
]

[workspace.dependencies]
coupler = { path = "." }
portlight = { git = "https://github.com/coupler-rs/portlight", rev = "6348cd97a320269638c7497a21ebc7fd786dafd6" }
flicker = { git = "https://github.com/coupler-rs/flicker", rev = "b7a25fa3a970f8c24e50b50364d239e743c72c6f" }
