[package]
name = "coupler"
version = "0.1.0"
authors = ["Micah Johnston <micah@photophore.systems>"]
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
coupler-derive = { path = "coupler-derive", optional = true }
clap-sys = "0.3.0"
vst3 = "0.1.2"
uuid = { version = "1.18.1", features = ["v5"] }

[features]
derive = ["coupler-derive"]

[workspace]
members = [
    "cargo-coupler",
    "coupler-derive",
    "examples/*",
    "examples/*/format/*",
]

[workspace.dependencies]
coupler = { path = "." }
