[package]
name = "gain"
version = "0.1.0"
authors = ["Micah Johnston <micah@glowcoil.com>"]
edition = "2018"
publish = false

[package.metadata.coupler]
name = "Gain"
formats = ["vst3"]

[lib]
crate-type = ["cdylib"]

[dependencies]
coupler = { path = ".." }
window = { path = "../window" }
graphics = { path = "../graphics" }
raw-window-handle = "0.3.3"

[features]
auv2 = []
clap = []
vst3 = []
