[package]
name = "gain"
version = "0.1.0"
authors = ["Micah Johnston <micah@glowcoil.com>"]
edition = "2018"
publish = false

[package.metadata.coupler]
name = "Gain"
formats = ["auv2", "clap", "vst3"]

[dependencies]
coupler = { path = ".." }
window = { path = "../window" }
graphics = { path = "../graphics" }
raw-window-handle = "0.3.3"
