[package]
name = "graphics"
version = "0.1.0"
authors = ["Micah Johnston <micah@glowcoil.com>"]
edition = "2018"
publish = false

[dependencies]
swash = { version = "0.1.4", features = ["scale"], default_features = false }
zeno = "0.2.2"

[dev-dependencies]
png = "0.11"
window = { path = "../window" }
usvg = "0.13.0"
