[package]
name = "gain"
version = "0.1.0"
authors = ["Micah Johnston <micah@photophore.systems>"]
edition = "2021"
publish = false

[package.metadata.coupler]
formats = ["clap", "vst3"]

[dependencies]
coupler = { workspace = true, features = ["derive"] }
coupler-reflector = { path = "../../coupler-reflector" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
