[package]
name = "gain"
version = "0.1.0"
authors = ["Micah Johnston <micah@photophore.systems>"]
edition = "2021"
publish = false

[dependencies]
coupler = { workspace = true, features = ["derive"] }
portlight = { git = "https://github.com/coupler-rs/portlight", rev = "e517f1e7e1700b70a74523cf905d5c80f81b4e81" }
flicker = { git = "https://github.com/coupler-rs/flicker", rev = "80aca05cb6c7406f8c2a4ba66d85849dc344afaa" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
