[package]
name = "gain"
version = "0.1.0"
authors = ["Micah Johnston <micah@glowcoil.com>"]
edition = "2018"
publish = false

[lib]
path = "lib.rs"

[dependencies]
plugin = { path = "../../plugin" }
window = { path = "../../window" }
graphics = { path = "../../graphics" }
raw-window-handle = "0.3.3"
