[package]
name = "gain-clap"
version = "0.1.0"
authors = ["Micah Johnston <micah@photophore.systems>"]
edition = "2021"
publish = false

[package.metadata.coupler]
name = "gain"
formats = ["clap"]

[lib]
crate-type = ["cdylib"]

[dependencies]
coupler = { workspace = true }
gain = { path = "../.." }
