[package]
name = "gain-vst3"
version = "0.1.0"
authors = ["Micah Johnston <micah@photophore.systems>"]
edition = "2021"
publish = false

[package.metadata.coupler]
name = "gain"
formats = ["vst3"]

[lib]
crate-type = ["cdylib"]

[dependencies]
coupler = { workspace = true }
gain = { path = "../.." }
